cmake_minimum_required(VERSION 3.19)
project(cobra_leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(cobra_leetcode main.cpp day_02/leet_07/leet_07.cpp day_02/leet_07/leet_07.h day_02/leet_08/leet_08.cpp day_02/leet_08/leet_08.h day_02/leet_28/leet_28.cpp day_02/leet_28/leet_28.h day_02/leet_122/leet_122.cpp day_02/leet_122/leet_122.h day_02/leet_189/leet_189.cpp day_02/leet_189/leet_189.h day_02/leet_217/leet_217.cpp day_02/leet_217/leet_217.h day_02/leet_283/leet_283.cpp day_02/leet_283/leet_283.h day_02/leet_344/leet_344.cpp day_02/leet_344/leet_344.h day_02/leet_704/leet_704.cpp day_02/leet_704/leet_704.h day_02/leet_1752/leet_1752.cpp day_02/leet_1752/leet_1752.h)